Sun Nov 17 12:57:10 2002  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/orbsvcs/CosNotification_Static.dsp:
	  Updated.
	* orbsvcs/orbsvcs/Notify/Structured/RTCORBA_*:
	  Removed extraneous files.

Sun Nov 17 12:05:20 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Portable_Interceptors/Makefile.bor: Added AMI test to the
	  list of tests that needs compilation. Thanks to Johnny for
	  pointing this out.

Sun Nov 17 09:37:08 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Makefile*: Updated dependencies again.

Sat Nov 16 21:09:32 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Portable_Interceptors/Makefile: Added AMI test to the list
	  of tests that needs compilation.

Sat Nov 16 20:43:21 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* */Makefile: Updated dependency.

Sat Nov 16 20:11:13 2002  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp:
	  - Modified threadpool creation flags to ACE_Task::activate. 
	  - Corrected decrement of <queue_length_>. 

Fri Nov 15 15:29:24 2002  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/tests/Notify/Basic/run_test.pl:
	  Modified to run the basic tests with a reactive and
	  multithreaded Notification.
	
	* orbsvcs/tests/Notify/Basic/notify.mt.conf:
	  Added MT conf for the Basic test.
	
	* orbsvcs/tests/Notify/Basic/notify.reactive.conf:	
	  Added reactive conf for the Basic test.

	* orbsvcs/tests/Notify/Blocking/notify.conf:
	* orbsvcs/tests/Notify/Discarding/notify.conf:
	* orbsvcs/tests/Notify/MT_Dispatching/notify_mtdispatching.conf:
	* orbsvcs/tests/Notify/Ordering/notify.conf:
	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/notify.conf:
	* orbsvcs/tests/Notify/Sequence_Multi_Filter/notify.conf
	* orbsvcs/tests/Notify/performance-tests/Filter/notify.conf
	* orbsvcs/tests/Notify/performance-tests/RedGreen/listener.conf