@@ -14,7 +14,7 @@ endif # ! TAO_ROOT
 
 IDL_FILES = Test
 IDL_SRC = TestC.cpp TestS.cpp
-BIN = client server
+BIN_UNCHECKED = client server
 
 SRC = $(addsuffix .cpp, $(BIN) \
 	Client_ORBInitializer \
@@ -47,6 +47,11 @@ TAO_IDLFLAGS += -Ge 1 -GC
 include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 include $(ACE_ROOT)/include/makeinclude/macros.GNU
 include $(TAO_ROOT)/rules.tao.GNU
+
+ifeq ($(ami),1)
+BIN=$(BIN_UNCHECKED)
+endif # ami
+
 include $(ACE_ROOT)/include/makeinclude/rules.common.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
